<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_multiplication"
    tools:context=".ActivityMultiplication">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_score_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/image_view_score_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/score" />

        <ImageView
            android:id="@+id/image_view_life_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/image_view_life_3"
            app:layout_constraintEnd_toStartOf="@+id/image_view_time_3"
            app:layout_constraintStart_toEndOf="@+id/image_view_score_3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/image_view_time_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/image_view_time_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/time" />

        <TextView
            android:id="@+id/text_view_score_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_zero_3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_view_score_3"
            app:layout_constraintStart_toStartOf="@+id/image_view_score_3"
            app:layout_constraintTop_toBottomOf="@+id/image_view_score_3" />

        <TextView
            android:id="@+id/text_view_life_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_three_3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_view_life_3"
            app:layout_constraintStart_toStartOf="@+id/image_view_life_3"
            app:layout_constraintTop_toBottomOf="@+id/image_view_life_3" />

        <TextView
            android:id="@+id/text_view_time_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_sixty_3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_view_time_3"
            app:layout_constraintStart_toStartOf="@+id/image_view_time_3"
            app:layout_constraintTop_toBottomOf="@+id/image_view_time_3" />

        <TextView
            android:id="@+id/text_view_question_3"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:text="@string/text_view_question_2"
            android:textColor="#FDC70B"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_life_3"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_answer_3"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/edit_text_answer_3"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_question_3"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_ok_3"
            android:layout_width="115dp"
            android:layout_height="55dp"
            android:backgroundTint="#FDC70B"
            android:text="@string/button_ok_3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_question_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_answer_3"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_question_3"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:backgroundTint="#FDC70B"
            android:text="@string/button_question_3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_ok_3"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_answer_3"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>